--- a/index.html
+++ b/index.html
@@ -6,148 +6,201 @@
 <title>Swiss Aid Connect Foundation</title>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 <style>
-   /* =========================================================
-   ROOT VARIABLES
-   ========================================================= */
-:root {
+  /* ============================================================
+   ROOT + GLOBAL RESET
+============================================================ */
+:root { 
   --blue:#0b61b6;
   --yellow:#f5c400;
   --purple:#7a2fa6;
-  --dark:#222;
-  --light:#fff;
-  --max-width:1180px;
   --utility-height:32px;
   --nav-height:84px;
   --side-nav-height:48px;
+  --max-width:1180px;
 }
 
-/* =========================================================
-   GLOBAL RESET
-   ========================================================= */
-html, body {
+/* Apply Poppins to everything */
+body, * { 
+  font-family: 'Poppins', sans-serif;
   margin:0;
   padding:0;
-  width:100%;
-  max-width:100%;
-  overflow-x:hidden;
-  font-family:'Poppins', sans-serif;
-  -webkit-overflow-scrolling:touch;
-}
-
-img {
-  max-width:100%;
-  height:auto;
-  display:block;
-}
-
-a {
-  text-decoration:none;
-  color:inherit;
-}
-
-/* =========================================================
-   HEADER WRAPPER
-   ========================================================= */
-.site-header {
-  position:fixed;
-  top:0;
-  left:0;
-  width:100%;
-  z-index:999;
-  background:#fff;
-  padding:14px 20px;
-  display:flex;
-  align-items:center;
-  justify-content:space-between;
   box-sizing:border-box;
 }
 
-/* =========================================================
+/* Prevent global horizontal overflow */
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+  -webkit-overflow-scrolling: touch;
+}
+
+/* ============================================================
+   BASIC ELEMENTS
+============================================================ */
+p { line-height: 26px; }
+img { max-width:100%; height:auto; }
+
+/* ============================================================
+   HEADER — DESKTOP + MOBILE SHARED
+============================================================ */
+.utility-bar {
+  height: var(--utility-height);
+  background:#0b61b6;
+  width:100%;
+}
+
+.site-header {
+  position: sticky;
+  top:0;
+  width:100%;
+  background:#fff;
+  z-index:99999;
+  padding:10px 16px;
+  box-shadow:0 2px 5px rgba(0,0,0,0.1);
+}
+
+/* Header container */
+.header-wrap {
+  max-width:var(--max-width);
+  margin:auto;
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+}
+
+/* ============================================================
    BRAND (Logo + Title)
-   ========================================================= */
+============================================================ */
 .brand {
   display:flex;
   align-items:center;
-  gap:10px;
+  gap:8px;
   width:100%;
   min-width:0;
+  padding-right:8px;
 }
 
 .brand img {
-  height:44px;
+  flex:0 0 auto;
+  height:40px;
+  max-width:100%;
   width:auto;
-  flex-shrink:0;
 }
 
 .brand h1 {
   margin:0;
-  font-weight:700;
-  line-height:1.15;
+  padding:0;
   flex:1 1 auto;
   min-width:0;
-  max-width:100%;
+  line-height:1.05;
   white-space:normal;
   overflow-wrap:break-word;
   word-break:break-word;
-  font-size:16px;               /* Larger for better visibility */
+  font-size:14px;
+  max-width:calc(100% - 56px);
 }
 
-/* =========================================================
-   DESKTOP ACTION BUTTONS (JOIN + DONATE)
-   ========================================================= */
-.nav-actions {
+/* ============================================================
+   DOT MENU BUTTON
+============================================================ */
+.dot-btn {
+  flex:0 0 40px;
+  width:40px;
+  height:40px;
   display:flex;
   align-items:center;
-  gap:12px;
-}
-
-.nav-actions a {
-  display:inline-block;
-  padding:10px 16px;
-  font-size:15px;
-  font-weight:600;
-  border-radius:8px;
-  white-space:nowrap;
-}
-
-.btn-join {
-  background:var(--yellow);
-  color:#000;
-}
-
-.btn-donate {
-  background:var(--purple);
-  color:#fff;
-}
-
-/* =========================================================
-   MOBILE MENU BUTTON (3 DOTS)
-   ========================================================= */
-.dot-btn {
-  display:none;
-  width:42px;
-  height:42px;
-  border-radius:10px;
-  background:transparent;
-  align-items:center;
   justify-content:center;
-  font-size:42px;
-  padding:0;
+  margin-left:6px;
+  background:transparent;
+  border:none;
+  font-size:38px;
+  cursor:pointer;
+  z-index:999;
 }
 
-/* =========================================================
-   MOBILE PANEL (SLIDING MENU)
-   ========================================================= */
+.dot-btn .dots {
+  font-size:42px;
+  line-height:0.8;
+}
+
+/* Hide dot button on desktop */
+@media (min-width:881px){
+  .dot-btn { display:none !important; }
+}
+
+/* ============================================================
+   NAV ACTIONS — JOIN + DONATE
+============================================================ */
+.nav-actions {
+  display:flex;
+  flex-direction:row;
+  align-items:center;
+  gap:14px;
+  flex-wrap:wrap;
+}
+
+.nav-actions .btn {
+  padding:9px 14px;
+  border-radius:7px;
+  text-decoration:none;
+  color:#fff;
+  font-size:15px;
+  white-space:nowrap;
+  overflow:hidden;
+  text-overflow:ellipsis;
+  max-width:46vw;
+}
+
+.join { background:var(--purple); }
+.donate { background:var(--yellow); color:#000; }
+
+/* ============================================================
+   DESKTOP HEADER OVERRIDES
+============================================================ */
+@media (min-width:881px){
+  .brand img { height:140px !important; }
+  .brand h1 {
+    font-size:26px !important;
+    line-height:1.15 !important;
+    max-width:260px !important;
+  }
+}
+
+/* ============================================================
+   MOBILE HEADER OVERRIDES
+============================================================ */
+@media (max-width:880px){
+  .brand h1 {
+    font-size:18px !important;
+    line-height:1.1 !important;
+    max-width:150px !important;
+  }
+}
+
+/* Very small screens */
+@media (max-width:420px) {
+  .brand img { height:32px; }
+  .brand h1 {
+    font-size:12.5px;
+    max-width:calc(100% - 48px);
+  }
+  .site-header { padding:8px 10px; }
+  .nav-actions .btn { padding:8px 10px; font-size:13px; }
+  .side-nav a { font-size:1rem; padding:8px 10px; }
+}
+
+/* ============================================================
+   MOBILE PANEL
+============================================================ */
 .mobile-panel {
   position:fixed;
   top:calc(var(--utility-height) + 110px);
-  left:0;
-  right:0;
+  left:0; right:0;
   background:#fff;
-  opacity:0;
   transform:translateY(-12px);
+  opacity:0;
   pointer-events:none;
-  transition:0.25s ease;
+  transition:.25s ease;
   z-index:500;
 }
 
@@ -157,61 +210,20 @@ a {
   pointer-events:auto;
 }
 
-.side-nav {
-  padding:20px;
-  display:flex;
-  flex-direction:column;
-  gap:16px;
+/* ============================================================
+   HERO TEXT SIZES
+============================================================ */
+@media (max-width:520px){
+  .hero-huge{ font-size:28px; }
+  .hero-sub{ font-size:18px; }
 }
 
-.side-nav a {
-  padding:10px;
-  font-size:1.1rem;
-  font-weight:600;
-}
-
-/* =========================================================
-   HERO SECTION
-   ========================================================= */
-.hero-section {
-  width:100%;
-  padding:130px 20px 60px;
-  background:#eae6ff;
-  box-sizing:border-box;
-  text-align:center;
-}
-
-.hero-huge {
-  font-size:48px;
-  font-weight:800;
-  line-height:1.1;
-  margin:0 auto 20px;
-}
-
-.hero-sub {
-  font-size:20px;
-  line-height:1.4;
-  max-width:560px;
-  margin:0 auto 30px;
-}
-
-/* CTA button */
-.serve-btn {
-  display:inline-block;
-  padding:14px 24px;
-  background:var(--purple);
-  color:#fff;
-  font-weight:700;
-  border-radius:12px;
-  margin-top:20px;
-}
-
-/* =========================================================
+/* ============================================================
    ANIMATIONS
-   ========================================================= */
+============================================================ */
 @keyframes fade-rotate {
   0%,30%{ opacity:0; transform:rotate(-5deg);}
-  10%,20%{ opacity:1; transform:rotate(0deg);}
+  10%,20%{ opacity:1; transform:rotate(0);}
   100%{ opacity:0; transform:rotate(5deg);}
 }
 
@@ -233,62 +245,29 @@ a {
   100%{ opacity:0; transform:rotateY(-90deg);}
 }
 
-/* =========================================================
-   MOBILE RESPONSIVE
-   ========================================================= */
-@media (max-width:880px) {
+/* ============================================================
+   SECTION DIVIDER LINES (8-shape)
+============================================================ */
+.line1 { max-width:100%; }
+.line2 { max-width:75%; }
+.line3 { max-width:50%; }
+.line4 { max-width:75%; }
+.line5 { max-width:100%; }
 
-  .nav-actions {
-    display:none; /* hide join/donate */
-  }
-
-  .dot-btn {
-    display:flex;
-  }
-
-  .brand img {
-    height:36px;
-  }
-
-  .brand h1 {
-    font-size:15px;
-    max-width:150px;
-  }
-
-  .hero-huge { font-size:32px; }
-  .hero-sub { font-size:18px; }
-
-  .site-header {
-    padding:12px 16px;
-  }
+/* ============================================================
+   BUTTONS
+============================================================ */
+.serve-btn {
+  display:inline-block;
+  padding:14px 24px;
+  background:#7a2fa6;
+  color:#fff;
+  font-weight:700;
+  border-radius:12px;
+  text-decoration:none;
+  margin-top:20px;
 }
 
-/* Very small screens */
-@media (max-width:420px) {
-  .brand img { height:32px; }
-  .brand h1 { font-size:14px; }
-}
-
-/* =========================================================
-   DESKTOP IMPROVEMENTS
-   ========================================================= */
-@media (min-width:881px) {
-
-  .dot-btn { display:none !important; }
-
-  .brand img {
-    height:140px;
-  }
-
-  .brand h1 {
-    font-size:28px;
-    max-width:260px;
-  }
-
-  .nav-actions {
-    display:flex;
-  }
-}
 </style>
 </head>
 <body>
